76 - Update component/task dispatcher dsl spec